objects/Account_Score__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Account  ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Score__c</fullName>
        <label>Account Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Scores</relationshipLabel>
        <relationshipName>Account_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X180_Days_Account_Score__c</fullName>
        <label>180 Days Account Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X30_Days_Account_Score__c</fullName>
        <label>30 Days Account Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X90_Days_Account_Score__c</fullName>
        <label>90 Days Account Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Score</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Account Scores</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>